# lodestone-minecraft-launcher

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: release.yml
.obsidian/Lodestone Minecraft Launcher/: Module Structure.md
.obsidian/Lodestone Minecraft Launcher/.obsidian/: community-plugins.json  workspace.json
crates/emerald-auth/: Cargo.toml  README.md
crates/emerald-auth/examples/: authenticate.rs  custom_port.rs  refresh.rs  step_by_step.rs
crates/emerald-auth/src/: callback.rs  client.rs  error.rs  lib.rs  microsoft.rs  minecraft.rs  types.rs  xbox.rs
crates/emerald-auth/tests/: callback_tests.rs  client_tests.rs  error_tests.rs  microsoft_tests.rs  types_tests.rs
crates/hopper-mc/: Cargo.toml  README.md  build.rs
crates/hopper-mc/examples/: browse_content_types.rs  curseforge_with_embedded_key.rs  curseforge_with_keyring.rs  custom_provider_trait.rs  find_mods.rs  get_mod.rs
crates/hopper-mc/src/: error.rs  lib.rs  platform.rs
crates/hopper-mc/src/model/: common.rs  datapack_item.rs  mod.rs  mod_item.rs  pack_item.rs  resourcepack_item.rs  shaderpack_item.rs  world_item.rs
crates/hopper-mc/src/modpack/: curseforge_pack.rs  manifest.rs  mod.rs  mrpack.rs  overrides.rs
crates/hopper-mc/src/provider/: mod.rs  traits.rs
crates/lodestone-cli/: Cargo.toml
crates/lodestone-core/: Cargo.toml
crates/lodestone-core/src/: instance.rs  instance_manager.rs  lib.rs
crates/lodestone-core/src/utils/: path_util.rs
crates/lodestone-gui/: .npmrc  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
crates/lodestone-gui/public/: lodestone-logo.icns
crates/lodestone-gui/src/: main.tsx
crates/lodestone-gui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
crates/lodestone-gui/src-tauri/capabilities/: default.json
crates/lodestone-gui/src-tauri/src/: auth.rs  instances.rs  java.rs  launcher.rs  lib.rs  main.rs  settings.rs
crates/lodestone-gui/src/assets/components/: Navigation.tsx
crates/lodestone-gui/src/components/: Chip.tsx  Switch.tsx  surfaces.ts
crates/lodestone-gui/src/components/discover/: BrowseCard.tsx  BrowseCompact.tsx  BrowseGrid.tsx  BrowseTable.tsx  ContentBrowser.tsx  ContentTabs.tsx  DependenciesTab.tsx  DetailHero.tsx  DetailSidebar.tsx  FilterDrawer.tsx  FilterPopover.tsx  GalleryTab.tsx  Pagination.tsx  SortSelect.tsx  SourceBadge.tsx  SourceTabs.tsx  SummaryTab.tsx  VersionsTab.tsx  ViewModeToggle.tsx  filterConfig.ts
crates/lodestone-gui/src/components/instance/: FileBrowserTab.tsx  InstanceHero.tsx  LogsTab.tsx  ModsTab.tsx  OverviewTab.tsx  ScreenshotsTab.tsx  SettingsTab.tsx  WorldsTab.tsx
crates/lodestone-gui/src/components/modals/: CoopSyncModal.tsx  DeleteInstanceModal.tsx  ImportModal.tsx  JoinServerModal.tsx  ModalShell.tsx  NewInstanceModal.tsx  primitives.tsx
crates/lodestone-gui/src/components/settings/: AccountsPane.tsx  AppearancePane.tsx  GeneralPane.tsx  JavaPane.tsx  NetworkPane.tsx  PrivacyPane.tsx  primitives.tsx
crates/lodestone-gui/src/components/shell/: AppShell.tsx  DownloadsPopover.tsx  ErrorBoundary.tsx  Particles.tsx  RequireAuth.tsx  Scene.tsx  Sidebar.tsx  TitleBar.tsx  WindowChrome.tsx  icons.tsx
crates/lodestone-gui/src/components/worlds/: WorldGrid.tsx  WorldGridCard.tsx  WorldMode.tsx  WorldTable.tsx  worldsData.ts
crates/lodestone-gui/src/context/: AuthContext.tsx  LaunchContext.tsx  SettingsContext.tsx
crates/lodestone-gui/src/css/: index.css
crates/lodestone-gui/src/hooks/: useContentSearch.ts  useInstanceImage.ts  useMinecraftVersions.ts  usePersistedState.ts
crates/lodestone-gui/src/pages/: ComingSoon.tsx  ContentDetail.tsx  Discover.tsx  Home.tsx  InstanceDetail.tsx  Login.tsx  Settings.tsx  Worlds.tsx
crates/lodestone-gui/src/types/: auth.ts  content.ts  settings.ts
crates/lodestone-website/: .npmrc  Cargo.toml  index.html  lodestone-server.service  package.json  pnpm-lock.yaml  tailwind.config.js
crates/lodestone-website/public/: site.webmanifest
crates/lodestone-website/src/: main.tsx
crates/lodestone-website/src-actix/: lib.rs  main.rs  releases_endpoint.rs  seo_endpoint.rs
crates/lodestone-website/src-actix/util/: asset_endpoint.rs  github_releases.rs  mod.rs
crates/lodestone-website/src/components/: DownloadButton.tsx  Features.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  Icons.tsx  Logo.tsx  Marquee.tsx  Navigation.tsx  OpenSource.tsx  Pricing.tsx  Quotes.tsx  ShowcaseSplits.tsx  Steps.tsx
crates/lodestone-website/src/css/: base.css  cta.css  features.css  footer.css  hero.css  index.css  marquee.css  nav.css  opensource.css  pricing.css  quotes.css  responsive.css  showcase.css  steps.css
crates/lodestone-website/src/hooks/: useRelease.ts
crates/lodestone-website/src/pages/: Home.tsx
crates/lodestone-website/src/videos/: lodestone launcher login screen.webm
crates/minecraft-loaders/: .gitignore  Cargo.toml
crates/minecraft-loaders/examples/: README.md
crates/minecraft-loaders/examples/fabric/: README.md  fabric_client_workflow.rs  fabric_download_server_jar.rs  fabric_fetch_versions.rs  fabric_install_client.rs  fabric_install_server.rs  fabric_read_mod_json.rs  fabric_server_workflow.rs  fabric_specific_version.rs
crates/minecraft-loaders/examples/forge/: forge_download_installer.rs  forge_fetch_versions.rs  forge_install_client.rs  forge_install_server.rs  forge_read_mods_toml.rs  forge_server_workflow.rs
crates/minecraft-loaders/examples/forge/forge_client_workflow/: args.rs  legacy.rs  modern.rs
crates/minecraft-loaders/src/: fabric.rs  lib.rs
crates/minecraft-loaders/src/fabric/: fabric_mod_json.rs  loader.rs  mod.rs  version_json.rs
crates/minecraft-loaders/src/forge/: loader.rs  mod.rs  mod_toml.rs
crates/minecraft-loaders/src/neoforge/: loader.rs  mod.rs
crates/minecraft-loaders/src/quilt/: loader.rs  mod.rs
crates/minecraft-loaders/tests/: fabric_mod_json_integration_test.rs  forge_mods_toml_integration_test.rs  loader_integration_test.rs
