[package]
name = "emerald-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Standalone Microsoft OAuth2 authentication for Minecraft launchers"
keywords = ["minecraft", "microsoft", "oauth2", "authentication", "xbox"]
categories = ["authentication", "games"]

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls", "webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.48", features = ["net", "rt", "sync", "macros", "time"] }
secrecy = "0.10"
url = "2"
log = "0.4"
open = "5"
rand = "0.9"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"
