[package]
name = "hopper-mc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Drew Chase"]
license = "MIT OR Apache-2.0"
description = "Like its namesake block, hopper-mc funnels mods, modpacks, datapacks, resourcepacks, worlds, and shaderpacks from every major Minecraft content platform (Modrinth, CurseForge, AT Launcher, TechnicPack, FTB) into one unified async API."
readme = "README.md"
keywords = ["minecraft", "modrinth", "curseforge", "modpack", "aggregator"]
categories = ["api-bindings", "games"]
repository = "https://github.com/drew-chase/hopper-mc"
homepage = "https://github.com/drew-chase/hopper-mc"
documentation = "https://docs.rs/hopper-mc"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.48", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "find_mods"
path = "examples/find_mods.rs"

[[example]]
name = "get_mod"
path = "examples/get_mod.rs"

[[example]]
name = "browse_content_types"
path = "examples/browse_content_types.rs"

[[example]]
name = "custom_provider_trait"
path = "examples/custom_provider_trait.rs"
