[package]
name = "lodestone-core"
version = "0.0.1-alpha"
edition = "2024"
authors = ["Drew Chase"]

[dependencies]
piston-mc = { version = "0.0.1-alpha", features = ["log", "assets", "java", "downloads"] }
log = { version = "0.4.29" }
anyhow = { version = "1.0.100" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "fs", "sync"] }
tokio-interactive = { version = "0.2.0" }
regex = { version = "1.12.2", features = ["logging"] }
minecraft_modloaders = { path="../minecraft-loaders", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros"] }