[package]
name = "lodestone-launcher"
version="0.0.1-alpha"
description = ""
authors = ["Drew Chase (Home) <dcmanproductions@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lodestone_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hopper-mc = { path = "../../hopper-mc" }
emerald-auth = { path = "../../emerald-auth" }
lodestone-core = { path = "../../lodestone-core" }
minecraft_modloaders = { path = "../../minecraft-loaders" }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync"] }
secrecy = "0.10"
md5 = "0.7"
log = "0.4"
chrono = "0.4"
piston-mc = { version = "0.1.4-beta", features = ["downloads", "java", "assets"] }
sysinfo = "0.33"
reqwest = { version = "0.13", features = ["json"] }
simple_download_utility = "0.1"
dunce = "1.0"
anyhow = "1.0"
valence_nbt = { version = "0.8", features = ["binary"] }
flate2 = "1.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
